# capster

./: .gitignore  CMakeLists.txt  NEXT_STEPS.md  README.md  main.cpp
libs/audioutil/: CMakeLists.txt  audioutil.cpp  audioutil.hpp  decodetable.h  exampleMpg123.c  wavplayer.c
libs/client/: CMakeLists.txt  client.cpp  client.hpp
libs/geoutil/: CMakeLists.txt  driver  driver.cpp  geoutil.cpp  geoutil.hpp
libs/rs232util/: CMakeLists.txt  rs232util.cpp  rs232util.hpp
libs/xmlhandler/: CMakeLists.txt  xmlhandler.cpp  xmlhandler.hpp
test/: mockserver.cpp
test/Samples/: Alberta.xml  Alberta2.xml  Alberta3.xml  Ontario.xml
